--- a/portfolio.html
+++ b/portfolio.html
@@ -40,22 +40,8 @@
                                         <li class="nav-item">
                                             <a class="nav-link link-decor" href="./redesign.html">Редизайн</a>
                                         </li>
-                                        <li class="nav-item dropdown">
-                                            <a class="nav-link link-decor" href="./contacts.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Контакты</a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Action</a>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Another action</a>
-                                                </li>
-                                                <li>
-                                                    <hr class="dropdown-divider"/>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Something else here</a>
-                                                </li>
-                                            </ul>
+                                        <li class="nav-item">
+                                            <a class="nav-link link-decor" href="./contacts.html">Контакты</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -78,7 +64,7 @@
             <div class="container">
                 <h1 class="preview__title title text-black text-uppercase text-start">портфолио</h1>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#application">
-                    Отправить заявку
+                    Оставить заявку
                 </button>
                 <p class="descr text-end mb-0">Мы готовы ответить на любые вопросы.</p>
                 <div class="line"></div>
@@ -98,7 +84,256 @@
             </div>
         </div>
 
+        <section class="page-portfolio product">
+            <div class="container">
+                <p class="scatter-left mb-5">
+                    На этой странице мы собрали часть наших завершенных работ. Вы можете пройти по ссылке и увидеть примеры уже запущенных сайтов. Скриншот появляется в том случае, если владельцы сайта перешли на другой домен или по каким-либо причинам закрыли проект
+                </p>
+                <h3 class="title scatter-left">Онлайн сервис для электронного документооборота</h3>
+                <p class="text scatter-left">2021</p>
+                <div class="slider">
+                    <div class="row">
+                        <div class="promo mb-5 mb-xl-0 col-12 col-xl-5 col-xxl-6">
+                            <a href="#">
+                                <img src="./assets/img/pages/works/кд-1.jpg" alt="Diadock">
+                            </a>
+                        </div>
+                        <div class="info col-12 col-xl-7 col-xxl-6 d-flex flex-wrap flex-column justify-content-between">
+                            <div class="figures d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">>100</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Страниц</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">25</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Дней</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">85 000₽</p>
+                                    <p class="text-center m-xl-0 mx-3 mx-sm-0">Стоимость</p>
+                                </div>
+                            </div>
+                            <div class="images mb-5 mb-xl-0 d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/кд-2.jpg" alt="Diadock">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/кд-3.jpg" alt="Diadock">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/кд-4.jpg" alt="Diadock">
+                                </a>
+                            </div>
+                            <div class="counter">
+                                <div class="d-flex">
+                                    <a href="#"><sup>2</sup></a>
+                                    <a href="#">4</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="page-portfolio product">
+            <div class="container">
+                <h3 class="title scatter-left">Аренда Английского автобуса на любой праздник</h3>
+                <p class="text scatter-left">2021</p>
+                <div class="slider">
+                    <div class="row">
+                        <div class="promo mb-5 mb-xl-0 col-12 col-xl-5 col-xxl-6">
+                            <a href="#">
+                                <img src="./assets/img/pages/works/bus-1.jpg" alt="Drivebus">
+                            </a>
+                        </div>
+                        <div class="info col-12 col-xl-7 col-xxl-6 d-flex flex-wrap flex-column justify-content-between">
+                            <div class="figures d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">>100</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Страниц</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">25</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Дней</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">85 000₽</p>
+                                    <p class="text-center m-xl-0 mx-3 mx-sm-0">Стоимость</p>
+                                </div>
+                            </div>
+                            <div class="images mb-5 mb-xl-0 d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/bus-2.jpg" alt="Drivebus">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/bus-3.jpg" alt="Drivebus">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/bus-4.jpg" alt="Drivebus">
+                                </a>
+                            </div>
+                            <div class="counter">
+                                <div class="d-flex">
+                                    <a href="#"><sup>2</sup></a>
+                                    <a href="#">4</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="page-portfolio product">
+            <div class="container">
+                <h3 class="title scatter-left">Уютрый домик в горах Архыза</h3>
+                <p class="text scatter-left">2021</p>
+                <div class="slider">
+                    <div class="row">
+                        <div class="promo mb-5 mb-xl-0 col-12 col-xl-5 col-xxl-6">
+                            <a href="#">
+                                <img src="./assets/img/pages/works/архыз-1.jpg" alt="Arkhyz">
+                            </a>
+                        </div>
+                        <div class="info col-12 col-xl-7 col-xxl-6 d-flex flex-wrap flex-column justify-content-between">
+                            <div class="figures d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">>100</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Страниц</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">25</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Дней</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">85 000₽</p>
+                                    <p class="text-center m-xl-0 mx-3 mx-sm-0">Стоимость</p>
+                                </div>
+                            </div>
+                            <div class="images mb-5 mb-xl-0 d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/архыз-2.jpg" alt="Arkhyz">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/архыз-3.jpg" alt="Arkhyz">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/архыз-4.jpg" alt="Arkhyz">
+                                </a>
+                            </div>
+                            <div class="counter">
+                                <div class="d-flex">
+                                    <a href="#"><sup>2</sup></a>
+                                    <a href="#">4</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="page-portfolio product">
+            <div class="container">
+                <h3 class="title scatter-left">Выпечка ручной работы по любому случаю</h3>
+                <p class="text scatter-left">2021</p>
+                <div class="slider">
+                    <div class="row">
+                        <div class="promo mb-5 mb-xl-0 col-12 col-xl-5 col-xxl-6">
+                            <a href="#">
+                                <img src="./assets/img/pages/works/bake-1.jpg" alt="NadicBake">
+                            </a>
+                        </div>
+                        <div class="info col-12 col-xl-7 col-xxl-6 d-flex flex-wrap flex-column justify-content-between">
+                            <div class="figures d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">>100</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Страниц</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">25</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Дней</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">85 000₽</p>
+                                    <p class="text-center m-xl-0 mx-3 mx-sm-0">Стоимость</p>
+                                </div>
+                            </div>
+                            <div class="images mb-5 mb-xl-0 d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/bake-2.jpg" alt="NadicBake">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/bake-3.jpg" alt="NadicBake">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/bake-4.jpg" alt="NadicBake">
+                                </a>
+                            </div>
+                            <div class="counter">
+                                <div class="d-flex">
+                                    <a href="#"><sup>2</sup></a>
+                                    <a href="#">4</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="page-portfolio product">
+            <div class="container">
+                <h3 class="title scatter-left">Онлайн сервисы для ООО и ИП</h3>
+                <p class="text scatter-left">2021</p>
+                <div class="slider">
+                    <div class="row">
+                        <div class="promo mb-5 mb-xl-0 col-12 col-xl-5 col-xxl-6">
+                            <a href="#">
+                                <img src="./assets/img/pages/works/кц-1.jpg" alt="СontourСenter">
+                            </a>
+                        </div>
+                        <div class="info col-12 col-xl-7 col-xxl-6 d-flex flex-wrap flex-column justify-content-between">
+                            <div class="figures d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">>100</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Страниц</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">25</p>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">Дней</p>
+                                </div>
+                                <div>
+                                    <p class="m-xl-0 mx-3 mx-sm-0">85 000₽</p>
+                                    <p class="text-center m-xl-0 mx-3 mx-sm-0">Стоимость</p>
+                                </div>
+                            </div>
+                            <div class="images mb-5 mb-xl-0 d-flex flex-wrap justify-content-around justify-content-xl-between">
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/кц-2.jpg" alt="СontourСenter">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/кц-3.jpg" alt="СontourСenter">
+                                </a>
+                                <a href="#">
+                                    <img class="mt-4 mt-md-0" src="./assets/img/pages/works/кц-4.jpg" alt="СontourСenter">
+                                </a>
+                            </div>
+                            <div class="counter">
+                                <div class="d-flex">
+                                    <a href="#"><sup>2</sup></a>
+                                    <a href="#">4</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p class="scatter-right mt-5 pt-5">
+                    Работа с нами — это стопроцентная гарантия оперативного выявления ошибок Вашего сайта. Более того, мы готовы исправить их в двухдневный срок с учетом всех современных требований, в том числе и требований законодательства.
+                </p>
+            </div>
+        </section>
 
         <section class="page-home application pt-0">
             <div class="container">
@@ -127,7 +362,7 @@
         <footer class="footer-page footer">
             <div class="container">
                 <div class="d-flex flex-wrap justify-content-start justify-content-sm-around justify-content-xl-between">
-                    <div class="info d-flex flex-column align-items-start order-1 order-xl-0 mt-5 mt-xl-0">
+                    <div class="info d-flex flex-column align-items-start order-1 order-xl-0 mx-4 mx-sm-0 mt-5 mt-xl-0">
                         <div class="logo">
                             <img class="img" src="assets/img/pages/home/svg/logo.svg" alt="logo"/>
                         </div>
@@ -202,7 +437,7 @@
                                 </li>
                         </ul>
                     </div>
-                    <div class="contacts d-flex flex-column align-items-sm-end mt-5 mt-xl-0 order-2 order-xl-0">
+                    <div class="contacts d-flex flex-column align-items-sm-end mx-4 mx-sm-0 mt-5 mt-xl-0 order-2 order-xl-0">
                         <a class="phone" href="tel:84952258118">8 495 225 8118</a>
                         <a class="mail" href="mailto:order@juventud.ru">order@juventud.ru</a>
                         <button class="btn">Заказать дизайн</button>
