--- a/redesign.html
+++ b/redesign.html
@@ -40,22 +40,8 @@
                                         <li class="nav-item">
                                             <a class="nav-link link-decor" href="./redesign.html">Редизайн</a>
                                         </li>
-                                        <li class="nav-item dropdown">
-                                            <a class="nav-link link-decor" href="./contacts.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Контакты</a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Action</a>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Another action</a>
-                                                </li>
-                                                <li>
-                                                    <hr class="dropdown-divider"/>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Something else here</a>
-                                                </li>
-                                            </ul>
+                                        <li class="nav-item">
+                                            <a class="nav-link link-decor" href="./contacts.html">Контакты</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -78,7 +64,7 @@
             <div class="container">
                 <h1 class="preview__title title text-black text-uppercase text-start">редизайн</h1>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#application">
-                    Отправить заявку
+                    Оставить заявку
                 </button>
                 <p class="descr text-end mb-0">Мы готовы ответить на любые вопросы.</p>
                 <div class="line"></div>
@@ -98,7 +84,26 @@
             </div>
         </div>
 
+        <section class="page-redesign content">
+            <div class="container">
+                <div class="row">
+                    <p class="text mb-5 col-lg-1">
+                        Редизайн — это  обновление внешнего и внутреннего функционала текущего сайта. Переделка, реконструкция, модернизация отражают лишь частичное изменение.
+                    </p>
+                    <img src="./assets/img/pages/redesign/redesign-img.jpg" alt="redesign" class="content__img col-lg-6 col-xl-7 col-xxl-8">
+                </div>
+                <p class="text mt-5">
+                    Редизайн сайта может быть полным и частичным. Полный редизайн включает создание нового дизайна и контента, перенос веб-ресурса на другой движок – более функциональный и удобный.
+                </p>
+                <p class="text mt-3">
+                    Частичный редизайн направлен на улучшение сайта, повышение качества страниц, доработки веб-ресурса с учетом поведенческих факторов. Перенос сайта на другой движок необходим, если проект перестаёт развиваться, так как его ограничивает платформа, на которой он работает.
 
+                </p>
+                <p class="content__text mt-3 scatter-right">
+                    При редизайне web-ресурса уделяю пристальное внимание сохранению и повышению позиций сайта в поисковой выдаче. Ведь моя задача увеличение трафика и конверсии.
+                </p>
+            </div>
+        </section>
 
         <section class="page-home application pt-0">
             <div class="container">
@@ -127,7 +132,7 @@
         <footer class="footer-page footer">
             <div class="container">
                 <div class="d-flex flex-wrap justify-content-start justify-content-sm-around justify-content-xl-between">
-                    <div class="info d-flex flex-column align-items-start order-1 order-xl-0 mt-5 mt-xl-0">
+                    <div class="info d-flex flex-column align-items-start order-1 order-xl-0 mx-4 mx-sm-0 mt-5 mt-xl-0">
                         <div class="logo">
                             <img class="img" src="assets/img/pages/home/svg/logo.svg" alt="logo"/>
                         </div>
@@ -202,7 +207,7 @@
                                 </li>
                         </ul>
                     </div>
-                    <div class="contacts d-flex flex-column align-items-sm-end mt-5 mt-xl-0 order-2 order-xl-0">
+                    <div class="contacts d-flex flex-column align-items-sm-end mx-4 mx-sm-0 mt-5 mt-xl-0 order-2 order-xl-0">
                         <a class="phone" href="tel:84952258118">8 495 225 8118</a>
                         <a class="mail" href="mailto:order@juventud.ru">order@juventud.ru</a>
                         <button class="btn">Заказать дизайн</button>
