--- a/contacts.html
+++ b/contacts.html
@@ -40,22 +40,8 @@
                                         <li class="nav-item">
                                             <a class="nav-link link-decor" href="./redesign.html">Редизайн</a>
                                         </li>
-                                        <li class="nav-item dropdown">
-                                            <a class="nav-link link-decor" href="./contacts.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Контакты</a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Action</a>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Another action</a>
-                                                </li>
-                                                <li>
-                                                    <hr class="dropdown-divider"/>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item" href="#">Something else here</a>
-                                                </li>
-                                            </ul>
+                                        <li class="nav-item">
+                                            <a class="nav-link link-decor" href="./contacts.html">Контакты</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -78,7 +64,7 @@
             <div class="container">
                 <h1 class="preview__title title text-black text-uppercase text-start">контакты</h1>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#application">
-                    Отправить заявку
+                    Оставить заявку
                 </button>
                 <p class="descr text-end mb-0">Мы готовы ответить на любые вопросы.</p>
                 <div class="line"></div>
@@ -107,11 +93,11 @@
         </section>
 
         <section class="page-contacts addres">
-            <div class="wrapper d-flex justify-content-between">
+            <div class="wrapper d-block d-lg-flex justify-content-between">
                 <div class="info d-flex flex-column justify-content-around">
-                    <a href="" class="link phone">8 495 225 8118</a>
-                    <a href="" class="link mail">info@juventud.ru</a>
-                    <a href="" class="link town">Москва</a>
+                    <a href="tel:84952258118" class="link phone">8 495 225 8118</a>
+                    <a href="mailto:info@juventud.ru" class="link mail">info@juventud.ru</a>
+                    <a href="https://yandex.ru/maps/213/moscow/house/seleznyovskaya_ulitsa_11as2/Z04YcAdjT0ICQFtvfXt5cH5lYg==/?ll=37.603676%2C55.781266&z=17.16" class="link town">Москва</a>
                     <div class="social d-flex">
                         <a href="#">
                             <img src="./assets/img/pages/contacts/svg/contacts-behance.svg" alt="behance">
@@ -155,7 +141,7 @@
         <footer class="footer-page footer">
             <div class="container">
                 <div class="d-flex flex-wrap justify-content-start justify-content-sm-around justify-content-xl-between">
-                    <div class="info d-flex flex-column align-items-start order-1 order-xl-0 mt-5 mt-xl-0">
+                    <div class="info d-flex flex-column align-items-start order-1 order-xl-0 mx-4 mx-sm-0 mt-5 mt-xl-0">
                         <div class="logo">
                             <img class="img" src="assets/img/pages/home/svg/logo.svg" alt="logo"/>
                         </div>
@@ -230,7 +216,7 @@
                                 </li>
                         </ul>
                     </div>
-                    <div class="contacts d-flex flex-column align-items-sm-end mt-5 mt-xl-0 order-2 order-xl-0">
+                    <div class="contacts d-flex flex-column align-items-sm-end mx-4 mx-sm-0 mt-5 mt-xl-0 order-2 order-xl-0">
                         <a class="phone" href="tel:84952258118">8 495 225 8118</a>
                         <a class="mail" href="mailto:order@juventud.ru">order@juventud.ru</a>
                         <button class="btn">Заказать дизайн</button>
